# messagerie

./: .env  Cargo.toml  Dockerfile  docker-compose.yml  insert_test_data.sql  update_messages.js
src/: handlers.rs  index.js  main.rs
src/config/: mongo.rs
src/handlers/: health.rs  messages.rs
src/models/: mod.rs
src/routes/: messageRoutes.js
src/services/: message_service.rs  userConnectionService.js  user_service.rs
